test/libsolidity/syntaxTests/parsing/multiple_function_param_trailing_comma.sol
contract test {
	function(uint a, uint b,) {}
}
// ----
// ParserError: (40-41): Unexpected trailing comma in parameter list.
